syntax = "proto3";

package protos;
import "common.proto";
message MembershipInfo {
  string ID = 1;
  string GroupID = 2;
  string UserID = 3;
  string GlobalPermissionID = 4;
  string UserPermissionID = 5;
  bool Frozen = 6;
  string Quota = 7;
}

message MemUserGroupInput {
  string UserID = 1;
  string GroupID = 2;
}

message MemberJoinGroup {
  string ID = 1;
	string GroupID = 2;
	string UserID = 3;
	string GlobalPermissionID = 4;
  string UserPermissionID = 5;
	bool Frozen = 6;
	optional string Quota = 7;
	string DisplayName = 8;
  string Description = 9;
  string Extra = 10;
	string CreatedAt = 11;
	string UpdatedAt = 12;
}

message ListMembershipByUserInput {
  string UserID = 1;
  LimitOffset Data = 2;
}

message ListMembershipByUserOutput {
  int64 count = 1;
  repeated MemberJoinGroup Data = 2;
}